GNOME Bugzilla – Bug 778816
pango-utils: Fix non-escaped \r\n line endings in pango_read_line()
Last modified: 2017-04-08 04:55:55 UTC
Trivial patch attached.
Created attachment 346047 [details] [review] pango-utils: Fix non-escaped \r\n line endings in pango_read_line() The handling for \r or \r\n line endings in pango_read_line() was broken. It should have discarded the \r or \r\n, but was only doing this for \n or \n\r. The condition (c == EOF) could never have been reached. Coverity ID: 1391696 Signed-off-by: Philip Withnall <withnall@endlessm.com>
Review of attachment 346047 [details] [review]: ok
Attachment 346047 [details] pushed as 6f06480 - pango-utils: Fix non-escaped \r\n line endings in pango_read_line()