pango-utils: Fix non-escaped \r\n line endings in pango_read_line()

The handling for \r or \r\n line endings in pango_read_line() was
broken. It should have discarded the \r or \r\n, but was only doing this
for \n or \n\r. The condition (c == EOF) could never have been reached.

Coverity ID: 1391696

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=778816